Adding permgen setting to java env